--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@mantine/core": "^7.5.0",
     "@mantine/hooks": "^7.5.0",
+    "@mui/x-charts": "^6.19.5",
     "@react-spring/web": "^9.7.3",
     "next": "14.1.0",
     "react": "^18",
